# zip-edu

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_windows_exe.ps1
src/: pyinstaller_entry_cli.py  pyinstaller_entry_gui.py
src/zip_edu/: __init__.py  bitstream.py  cli.py  crc32.py  deflate.py  explain.py  gui.py  huffman.py  lz77.py  service.py  zip_format.py
tests/: test_deflate.py  test_explain.py  test_lz77.py  test_project_intent.py  test_zip_format.py
