[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zip-edu"
version = "0.3.0"
description = "Educational ZIP/Deflate implementation with a library-free core and optional GUI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "zip-edu contributors" }]
dependencies = []

[project.optional-dependencies]
gui = [
  "PySide6>=6.7,<7",
]
build = [
  "PySide6>=6.7,<7",
  "PyInstaller>=6,<7",
  "pytest>=8,<9",
]

[project.scripts]
zip-edu = "zip_edu.cli:main"
zip-edu-gui = "zip_edu.gui:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
